--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
 	<script type="text/javascript" src="js/jquery.js"></script>
 	<script type="text/javascript" src="js/script.js"></script>
 	<meta charset="UTF-8">
+	<script src="https://maps.googleapis.com/maps/api/js"></script>
+    <script>
+      function initialize() {
+        var mapCanvas = document.getElementById('map-canvas');
+        var mapOptions = {
+          center: new google.maps.LatLng(-34.858662, -56.165468),
+          zoom: 12,
+          mapTypeId: google.maps.MapTypeId.ROADMAP
+        }
+        var map = new google.maps.Map(mapCanvas, mapOptions)
+      }
+      google.maps.event.addDomListener(window, 'load', initialize);
+    </script>
 </head>
 <body>
 	<header>
@@ -175,6 +188,26 @@
 				</div>
 			</div>
 		</section>
+		<section id="contact">
+			<div class="wrap">
+				<h2>Contact</h2>
+				<p>Feel free in tell us what you think</p>
+				<div id="map-canvas"></div>
+				<form>
+					<input type="text" name="contact-name" id="contact-name" value="Name">
+					<input type="text" name="contact-email" id="contact-email" value="E-mail">
+					<input type="text" name="contact-subject" id="contact-subject" value="Subject">
+					<textarea name="contact-message" id="contact-message"> Message</textarea>
+					<button>SEND</button>
+			</form>
+			</div>
+		</section>
+		<footer>
+			<div class="wrap">
+				<h2>Smoothly</h2>
+				<p>Designed with love by Iliana Núñez</p>
+			</div>
+		</footer>
 	</div>
 </body>
 </html>
