Add blog to the homepage

--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 	<title>Smoothly</title>
 	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/base.css">
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.css">
 	<script type="text/javascript" src="js/jquery.js"></script>
 	<script type="text/javascript" src="js/script.js"></script>
 	<meta charset="UTF-8">
 	<script src="https://maps.googleapis.com/maps/api/js"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
     <script>
       function initialize() {
         var mapCanvas = document.getElementById('map-canvas');
@@ -158,8 +160,8 @@
 				<p>Our Featured Works and Case Studies so far</p>
 				<nav>
 					<ul>
-						<li>
-							<a href="#" class="active">All</a>
+						<li class="active">
+							<a href="#">All</a>
 						</li>
 						<li>
 							<a href="#">Branding</a>
@@ -176,15 +178,15 @@
 					</ul>
 				</nav>
 				<div class="images">
-					<img src="images/03.jpg">
-					<img src="images/07.jpg">
-					<img src="images/08.jpg">
-					<img src="images/02.jpg">
-					<img src="images/04.jpg">
-					<img src="images/05.jpg">
-					<img src="images/01.jpg">
-					<img src="images/06.jpg">
-					<img src="images/09.jpg">
+					<img src="images/03.jpg" srcset="photo@2x.png 2x">
+					<img src="images/07.jpg" srcset="photo@2x.png 2x">
+					<img src="images/08.jpg" srcset="photo@2x.png 2x">
+					<img src="images/02.jpg" srcset="photo@2x.png 2x">
+					<img src="images/04.jpg" srcset="photo@2x.png 2x">
+					<img src="images/05.jpg" srcset="photo@2x.png 2x">
+					<img src="images/01.jpg" srcset="photo@2x.png 2x">
+					<img src="images/06.jpg" srcset="photo@2x.png 2x">
+					<img src="images/09.jpg" srcset="photo@2x.png 2x">
 				</div>
 			</div>
 		</section>
